--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>index</title>
-    <link href="/style/style.css" rel="stylesheet" />
-    <link href="/style/Index.css" rel="stylesheet" />
+    <link href="./style/style.css" rel="stylesheet" />
+    <link href="./style/Index.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +18,7 @@
         <div class="logo">
           <a href="./index.html"
             ><img
-              src="photos/logo_robbie_lens.png"
+              src="./photos/logo_robbie_lens.png"
               class="lien-logos"
               alt="logo robbie lens"
           /></a>
