--- a/pages/tarifs.html
+++ b/pages/tarifs.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Tarifs</title>
-    <link href="/style/style.css" rel="stylesheet" />
-    <link href="/style/tarifs.css" rel="stylesheet" />
+    <link href="../style/style.css" rel="stylesheet" />
+    <link href="../style/tarifs.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
