--- a/pages/a-propos.html
+++ b/pages/a-propos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>À propos de Robbie Lens</title>
-    <link href="/style/style.css" rel="stylesheet" />
-    <link href="/style/a-propos.css" rel="stylesheet" />
+    <link href="../style/style.css" rel="stylesheet" />
+    <link href="../style/a-propos.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,16 +15,15 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="/photos/logo_robbie_lens.png" class="lien-logos"
+                <a href="./index.html"><img src="/photos/logo_robbie_lens.png" class="lien-logos"
                         alt="logo robbie lens"></a>
             </div>
             <div class="menu">
-                <a href="/index.html" class="accueil">Accueil</a>
-                <a href="/pages/a-propos.html" class="a-propos">À propos</a>
-                <a href="/pages/tarifs.html" class="tarifs">Tarifs</a>
-                <a href="/pages/portfolio.html" class="Portfolio">Portfolio</a>
+                <a href="./index.html" class="accueil">Accueil</a>
+                <a href="./pages/a-propos.html" class="a-propos">À propos</a>
+                <a href="./pages/tarifs.html" class="tarifs">Tarifs</a>
+                <a href="./pages/portfolio.html" class="Portfolio">Portfolio</a>
             </div>
-
         </nav>
     </header>
     <main class="main">
