--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Portfolio – Robbie Lens Photographie</title>
-    <link href="/style/style.css" rel="stylesheet" />
-    <link href="/style/portfolio.css" rel="stylesheet" />
+    <link href="../style/style.css" rel="stylesheet" />
+    <link href="../style/portfolio.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="index.html"
+          <a href="./index.html"
             ><img
               src="../photos/logo_robbie_lens.png"
               class="lien-logos"
