--- a/pages/a-propos.html
+++ b/pages/a-propos.html
@@ -15,12 +15,12 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="./index.html"><img src="/photos/logo_robbie_lens.png" class="lien-logos"
+                <a href="../index.html"><img src="../photos/logo_robbie_lens.png" class="lien-logos"
                         alt="logo robbie lens"></a>
             </div>
             <div class="menu">
-                <a href="./index.html" class="accueil">Accueil</a>
-                <a href="./pages/a-propos.html" class="a-propos">À propos</a>
+                <a href="../index.html" class="accueil">Accueil</a>
+                <a href="./a-propos.html" class="a-propos">À propos</a>
                 <a href="./pages/tarifs.html" class="tarifs">Tarifs</a>
                 <a href="./pages/portfolio.html" class="Portfolio">Portfolio</a>
             </div>
@@ -65,7 +65,7 @@
                     </ul>
                 </div>
                 <div class="text-center">
-                    <a href="/pages/portfolio.html" class="cta">VOIR MON PORTFOLIO</a>
+                    <a href="./pages/portfolio.html" class="cta">VOIR MON PORTFOLIO</a>
                 </div>
             </section>
 
@@ -73,7 +73,7 @@
     <footer>
         <nav>
             <div class="left">
-                <a href="index.html"><img src="../photos/logo_robbie_lens.png" class="lien-logos"></a>
+                <a href="../index.html"><img src="../photos/logo_robbie_lens.png" class="lien-logos"></a>
             </div>
             <div class="right">
                 <a href="https://twitter.com/" target="_blank"><img src="../photos/logo_twitter.png" class="lien-logos"
