--- a/pages/tarifs.html
+++ b/pages/tarifs.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="index.html"
+          <a href="../index.html"
             ><img
               src="../photos/logo_robbie_lens.png"
               class="lien-logos"
@@ -25,10 +25,10 @@
           /></a>
         </div>
         <div class="menu">
-          <a href="/index.html" class="accueil">Accueil</a>
-          <a href="/pages/a-propos.html" class="a-propos">À propos</a>
-          <a href="/pages/tarifs.html" class="tarifs">Tarifs</a>
-          <a href="/pages/portfolio.html" class="Portfolio">Portfolio</a>
+          <a href="../index.html" class="accueil">Accueil</a>
+          <a href="./pages/a-propos.html" class="a-propos">À propos</a>
+          <a href="./pages/tarifs.html" class="tarifs">Tarifs</a>
+          <a href="./pages/portfolio.html" class="Portfolio">Portfolio</a>
         </div>
       </nav>
     </header>
@@ -67,7 +67,7 @@
     <footer>
       <nav>
         <div class="left">
-          <a href="index.html"
+          <a href="../index.html"
             ><img src="../photos/logo_robbie_lens.png" class="lien-logos"
           /></a>
         </div>
