--- a/pages/a-propos.html
+++ b/pages/a-propos.html
@@ -5,7 +5,6 @@
     <title>À propos de Robbie Lens</title>
     <link href="../style/style.css" rel="stylesheet" />
     <link href="../style/a-propos.css" rel="stylesheet" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
@@ -21,8 +20,8 @@
             <div class="menu">
                 <a href="../index.html" class="accueil">Accueil</a>
                 <a href="./a-propos.html" class="a-propos">À propos</a>
-                <a href="./pages/tarifs.html" class="tarifs">Tarifs</a>
-                <a href="./pages/portfolio.html" class="Portfolio">Portfolio</a>
+                <a href="./tarifs.html" class="tarifs">Tarifs</a>
+                <a href="./portfolio.html" class="Portfolio">Portfolio</a>
             </div>
         </nav>
     </header>
