--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,10 +7,7 @@
     <link href="../style/portfolio.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap"rel="stylesheet"/>
   </head>
 
   <body>
@@ -26,9 +23,9 @@
         </div>
         <div class="menu">
           <a href="../index.html" class="accueil">Accueil</a>
-          <a href="./pages/a-propos.html" class="a-propos">À propos</a>
-          <a href="./pages/tarifs.html" class="tarifs">Tarifs</a>
-          <a href="./pages/portfolio.html" class="Portfolio">Portfolio</a>
+          <a href="./a-propos.html" class="a-propos">À propos</a>
+          <a href="./tarifs.html" class="tarifs">Tarifs</a>
+          <a href="./portfolio.html" class="Portfolio">Portfolio</a>
         </div>
       </nav>
     </header>
