--- a/pages/tarifs.html
+++ b/pages/tarifs.html
@@ -26,9 +26,9 @@
         </div>
         <div class="menu">
           <a href="../index.html" class="accueil">Accueil</a>
-          <a href="./pages/a-propos.html" class="a-propos">À propos</a>
-          <a href="./pages/tarifs.html" class="tarifs">Tarifs</a>
-          <a href="./pages/portfolio.html" class="Portfolio">Portfolio</a>
+          <a href="./a-propos.html" class="a-propos">À propos</a>
+          <a href="./tarifs.html" class="tarifs">Tarifs</a>
+          <a href="./portfolio.html" class="Portfolio">Portfolio</a>
         </div>
       </nav>
     </header>
