lien vers portfolio

--- a/pages/a-propos.html
+++ b/pages/a-propos.html
@@ -64,7 +64,7 @@
                     </ul>
                 </div>
                 <div class="text-center">
-                    <a href="./pages/portfolio.html" class="cta">VOIR MON PORTFOLIO</a>
+                    <a href="./portfolio.html" class="cta">VOIR MON PORTFOLIO</a>
                 </div>
             </section>
 
